--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,10 @@ h1 {
 input {
     font-size: 20px;
     margin: 5px;
+    width: 300px;
 }
 
-button {
+button.new {
     font-size: 20px;
     background-color: #8db1eb;
     margin: 5px;
